--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ plugins {
     id 'org.springframework.boot' version '2.5.3'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'maven-publish'
 }
 
 apply plugin: 'spring-cloud-contract'
@@ -28,14 +29,12 @@ ext {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'org.springframework.cloud:spring-cloud-stream'
-//    implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
+    implementation('org.springframework.boot:spring-boot-starter')
+    implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//    testImplementation 'org.springframework.amqp:spring-rabbit-test'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
-    testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support'
+    testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-stream', classifier: 'test-binder')
 }
 
 dependencyManagement {
@@ -47,6 +46,14 @@ dependencyManagement {
 contracts {
     testFramework = org.springframework.cloud.contract.verifier.config.TestFramework.JUNIT5
     baseClassForTests = 'com.bsgrd.producer.BaseTest'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifact verifierStubsJar
+        }
+    }
 }
 
 contractTest {
